--- a/src/App.css
+++ b/src/App.css
@@ -170,3 +170,21 @@
   height: 24px;
   width: 25px;
 }
+
+.spinner-border {
+  border-width: 2px;
+  height: 12px;
+  width: 12px;
+  border-style: solid;
+  border-color: #696a6b;
+  /* Replace with your desired border color */
+  border-right-color: transparent;
+  border-radius: 50%;
+  animation: spin 0.75s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
